--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-uid": "^2.3.3",
-    "styled-components": "^6.0.2"
+    "styled-components": "^6.0.2",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
